v1.0.0/modules/schema/pages/class/ExcIEEEST4B.adoc
= `ExcIEEEST4B`
:toclevels: 4


+++IEEE 421.5-2005 type ST4B model. This model is a variation of the type ST3A model, with a proportional plus integral (PI) regulator block replacing the lag-lead regulator characteristic that is in the ST3A model. Both potential and compound source rectifier excitation systems are modelled.  The PI regulator blocks have non-windup limits that are represented. The voltage regulator of this model is typically implemented digitally.
Reference: IEEE 421.5-2005, 7.4.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcIEEEST4B`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcIEEEST4B`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ExcIEEEST4B {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



































SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PowerSystemStabilizerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType1Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OverexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiscontinuousExcitationControlDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType2Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



UnderexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



VoltageCompensatorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




















ExcIEEEST4B -> SynchronousMachineDynamics: SynchronousMachineDynamics


ExcIEEEST4B -> PowerSystemStabilizerDynamics: PowerSystemStabilizerDynamics


ExcIEEEST4B -> PFVArControllerType1Dynamics: PFVArControllerType1Dynamics


ExcIEEEST4B -> OverexcitationLimiterDynamics: OverexcitationLimiterDynamics


ExcIEEEST4B -> DiscontinuousExcitationControlDynamics: DiscontinuousExcitationControlDynamics


ExcIEEEST4B -> PFVArControllerType2Dynamics: PFVArControllerType2Dynamics


ExcIEEEST4B -> UnderexcitationLimiterDynamics: UnderexcitationLimiterDynamics


ExcIEEEST4B -> VoltageCompensatorDynamics: VoltageCompensatorDynamics


ExcIEEEST4B -> DiagramObject: DiagramObjects


ExcIEEEST4B -> InstanceSet: InstanceSet


ExcIEEEST4B -> Name: Names


ExcIEEEST4B -> ChangeSetMember: PropertiesCIMDataObject


ExcIEEEST4B -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++

| <<kc,`kc`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Rectifier loading factor proportional to commutating reactance (<i>K</i><i><sub>C</sub></i>) (&gt;= 0). Typical value = 0,113.+++

| <<kg,`kg`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Feedback gain constant of the inner loop field regulator (<i>K</i><i><sub>G</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<ki,`ki`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Potential circuit gain coefficient (<i>K</i><i><sub>I</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<kim,`kim`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage regulator integral gain output (<i>K</i><i><sub>IM</sub></i>).  Typical value = 0.+++

| <<kir,`kir`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage regulator integral gain (<i>K</i><i><sub>IR</sub></i>).  Typical value = 10,75.+++

| <<kp,`kp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Potential circuit gain coefficient (<i>K</i><i><sub>P</sub></i>) (&gt; 0).  Typical value = 9,3.+++

| <<kpm,`kpm`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage regulator proportional gain output (<i>K</i><i><sub>PM</sub></i>).  Typical value = 1.+++

| <<kpr,`kpr`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage regulator proportional gain (<i>K</i><i><sub>PR</sub></i>).  Typical value = 10,75.+++

| <<ta,`ta`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>T</i><i><sub>A</sub></i>) (&gt;= 0).  Typical value = 0,02.+++

| <<thetap,`thetap`>>
| 0..1
| xref::class/AngleDegrees.adoc[`AngleDegrees`]
| +++Potential circuit phase angle (<i>thetap</i>).  Typical value = 0.+++

| <<vbmax,`vbmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum excitation voltage (<i>V</i><i><sub>BMax</sub></i>) (&gt; 0).  Typical value = 11,63.+++

| <<vmmax,`vmmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum inner loop output (<i>V</i><i><sub>MMax</sub></i>) (&gt; ExcIEEEST4B.vmmin).  Typical value = 99.+++

| <<vmmin,`vmmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum inner loop output (<i>V</i><i><sub>MMin</sub></i>) (&lt; ExcIEEEST4B.vmmax).  Typical value = -99.+++

| <<vrmax,`vrmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>V</i><i><sub>RMAX</sub></i>) (&gt; 0).  Typical value = 1.+++

| <<vrmin,`vrmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>V</i><i><sub>RMIN</sub></i>) (&lt; 0).  Typical value = -0,87.+++

| <<xl,`xl`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Reactance associated with potential source (<i>X</i><i><sub>L</sub></i>) (&gt;= 0).  Typical value = 0,124.+++

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kc]
=== `kc`
+++Rectifier loading factor proportional to commutating reactance (<i>K</i><i><sub>C</sub></i>) (&gt;= 0). Typical value = 0,113.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kg]
=== `kg`
+++Feedback gain constant of the inner loop field regulator (<i>K</i><i><sub>G</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kg`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ki]
=== `ki`
+++Potential circuit gain coefficient (<i>K</i><i><sub>I</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.ki`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kim]
=== `kim`
+++Voltage regulator integral gain output (<i>K</i><i><sub>IM</sub></i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kim`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kir]
=== `kir`
+++Voltage regulator integral gain (<i>K</i><i><sub>IR</sub></i>).  Typical value = 10,75.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kir`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kp]
=== `kp`
+++Potential circuit gain coefficient (<i>K</i><i><sub>P</sub></i>) (&gt; 0).  Typical value = 9,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kpm]
=== `kpm`
+++Voltage regulator proportional gain output (<i>K</i><i><sub>PM</sub></i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kpm`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kpr]
=== `kpr`
+++Voltage regulator proportional gain (<i>K</i><i><sub>PR</sub></i>).  Typical value = 10,75.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kpr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#ta]
=== `ta`
+++Voltage regulator time constant (<i>T</i><i><sub>A</sub></i>) (&gt;= 0).  Typical value = 0,02.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#thetap]
=== `thetap`
+++Potential circuit phase angle (<i>thetap</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.thetap`
| Cardinality
| 0..1
| Type
| xref::class/AngleDegrees.adoc[`AngleDegrees`]


|===

//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#vbmax]
=== `vbmax`
+++Maximum excitation voltage (<i>V</i><i><sub>BMax</sub></i>) (&gt; 0).  Typical value = 11,63.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.vbmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vmmax]
=== `vmmax`
+++Maximum inner loop output (<i>V</i><i><sub>MMax</sub></i>) (&gt; ExcIEEEST4B.vmmin).  Typical value = 99.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.vmmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vmmin]
=== `vmmin`
+++Minimum inner loop output (<i>V</i><i><sub>MMin</sub></i>) (&lt; ExcIEEEST4B.vmmax).  Typical value = -99.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.vmmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#vrmax]
=== `vrmax`
+++Maximum voltage regulator output (<i>V</i><i><sub>RMAX</sub></i>) (&gt; 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.vrmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vrmin]
=== `vrmin`
+++Minimum voltage regulator output (<i>V</i><i><sub>RMIN</sub></i>) (&lt; 0).  Typical value = -0,87.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.vrmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#xl]
=== `xl`
+++Reactance associated with potential source (<i>X</i><i><sub>L</sub></i>) (&gt;= 0).  Typical value = 0,124.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.xl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


