v1.1.0/modules/schema/pages/class/ExcIEEEST4B.adoc
= `ExcIEEEST4B`
:toclevels: 4


+++IEEE 421.5-2005 type ST4B model. This model is a variation of the type ST3A model, with a proportional plus integral (PI) regulator block replacing the lag-lead regulator characteristic that is in the ST3A model. Both potential and compound source rectifier excitation systems are modelled.  The PI regulator blocks have non-windup limits that are represented. The voltage regulator of this model is typically implemented digitally.
Reference: IEEE 421.5-2005, 7.4.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcIEEEST4B`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcIEEEST4B`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<kc,`kc`>>
//| [[slots_table.kc]]<<kc,`kc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Rectifier loading factor proportional to commutating reactance (<i>K</i><i><sub>C</sub></i>) (&gt;= 0). Typical value = 0,113.+++
| _n/a_

| <<kg,`kg`>>
//| [[slots_table.kg]]<<kg,`kg`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Feedback gain constant of the inner loop field regulator (<i>K</i><i><sub>G</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ki,`ki`>>
//| [[slots_table.ki]]<<ki,`ki`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Potential circuit gain coefficient (<i>K</i><i><sub>I</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<kim,`kim`>>
//| [[slots_table.kim]]<<kim,`kim`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage regulator integral gain output (<i>K</i><i><sub>IM</sub></i>).  Typical value = 0.+++
| _n/a_

| <<kir,`kir`>>
//| [[slots_table.kir]]<<kir,`kir`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage regulator integral gain (<i>K</i><i><sub>IR</sub></i>).  Typical value = 10,75.+++
| _n/a_

| <<kp,`kp`>>
//| [[slots_table.kp]]<<kp,`kp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Potential circuit gain coefficient (<i>K</i><i><sub>P</sub></i>) (&gt; 0).  Typical value = 9,3.+++
| _n/a_

| <<kpm,`kpm`>>
//| [[slots_table.kpm]]<<kpm,`kpm`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage regulator proportional gain output (<i>K</i><i><sub>PM</sub></i>).  Typical value = 1.+++
| _n/a_

| <<kpr,`kpr`>>
//| [[slots_table.kpr]]<<kpr,`kpr`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage regulator proportional gain (<i>K</i><i><sub>PR</sub></i>).  Typical value = 10,75.+++
| _n/a_

| <<ta,`ta`>>
//| [[slots_table.ta]]<<ta,`ta`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>T</i><i><sub>A</sub></i>) (&gt;= 0).  Typical value = 0,02.+++
| _n/a_

| <<thetap,`thetap`>>
//| [[slots_table.thetap]]<<thetap,`thetap`>>
| 0..1 +
xref::class/AngleDegrees.adoc[`AngleDegrees`]
| +++Potential circuit phase angle (<i>thetap</i>).  Typical value = 0.+++
| _n/a_

| <<vbmax,`vbmax`>>
//| [[slots_table.vbmax]]<<vbmax,`vbmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum excitation voltage (<i>V</i><i><sub>BMax</sub></i>) (&gt; 0).  Typical value = 11,63.+++
| _n/a_

| <<vmmax,`vmmax`>>
//| [[slots_table.vmmax]]<<vmmax,`vmmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum inner loop output (<i>V</i><i><sub>MMax</sub></i>) (&gt; ExcIEEEST4B.vmmin).  Typical value = 99.+++
| _n/a_

| <<vmmin,`vmmin`>>
//| [[slots_table.vmmin]]<<vmmin,`vmmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum inner loop output (<i>V</i><i><sub>MMin</sub></i>) (&lt; ExcIEEEST4B.vmmax).  Typical value = -99.+++
| _n/a_

| <<vrmax,`vrmax`>>
//| [[slots_table.vrmax]]<<vrmax,`vrmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>V</i><i><sub>RMAX</sub></i>) (&gt; 0).  Typical value = 1.+++
| _n/a_

| <<vrmin,`vrmin`>>
//| [[slots_table.vrmin]]<<vrmin,`vrmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>V</i><i><sub>RMIN</sub></i>) (&lt; 0).  Typical value = -0,87.+++
| _n/a_

| <<xl,`xl`>>
//| [[slots_table.xl]]<<xl,`xl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactance associated with potential source (<i>X</i><i><sub>L</sub></i>) (&gt;= 0).  Typical value = 0,124.+++
| _n/a_

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
//| [[slots_table.DiscontinuousExcitationControlDynamics]]<<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1 +
xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
//| [[slots_table.OverexcitationLimiterDynamics]]<<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1 +
xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
//| [[slots_table.PFVArControllerType1Dynamics]]<<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
//| [[slots_table.PFVArControllerType2Dynamics]]<<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
//| [[slots_table.PowerSystemStabilizerDynamics]]<<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1 +
xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
//| [[slots_table.UnderexcitationLimiterDynamics]]<<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1 +
xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
//| [[slots_table.VoltageCompensatorDynamics]]<<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1 +
xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.DiscontinuousExcitationControlDynamics,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kc]
=== `kc`
+++Rectifier loading factor proportional to commutating reactance (<i>K</i><i><sub>C</sub></i>) (&gt;= 0). Typical value = 0,113.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kc,&#10548;>>
--
////


//[discrete]
[#kg]
=== `kg`
+++Feedback gain constant of the inner loop field regulator (<i>K</i><i><sub>G</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kg`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kg,&#10548;>>
--
////


//[discrete]
[#ki]
=== `ki`
+++Potential circuit gain coefficient (<i>K</i><i><sub>I</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.ki`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ki,&#10548;>>
--
////


//[discrete]
[#kim]
=== `kim`
+++Voltage regulator integral gain output (<i>K</i><i><sub>IM</sub></i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kim`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kim,&#10548;>>
--
////


//[discrete]
[#kir]
=== `kir`
+++Voltage regulator integral gain (<i>K</i><i><sub>IR</sub></i>).  Typical value = 10,75.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kir`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kir,&#10548;>>
--
////


//[discrete]
[#kp]
=== `kp`
+++Potential circuit gain coefficient (<i>K</i><i><sub>P</sub></i>) (&gt; 0).  Typical value = 9,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kp,&#10548;>>
--
////


//[discrete]
[#kpm]
=== `kpm`
+++Voltage regulator proportional gain output (<i>K</i><i><sub>PM</sub></i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kpm`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpm,&#10548;>>
--
////


//[discrete]
[#kpr]
=== `kpr`
+++Voltage regulator proportional gain (<i>K</i><i><sub>PR</sub></i>).  Typical value = 10,75.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.kpr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpr,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.OverexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType1Dynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType2Dynamics,&#10548;>>
--
////


//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemStabilizerDynamics,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#ta]
=== `ta`
+++Voltage regulator time constant (<i>T</i><i><sub>A</sub></i>) (&gt;= 0).  Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ta,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#thetap]
=== `thetap`
+++Potential circuit phase angle (<i>thetap</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.thetap`
| Cardinality
| 0..1
| Type
| xref::class/AngleDegrees.adoc[`AngleDegrees`]


|===

////
[.text-left]
--
<<slots_table.thetap,&#10548;>>
--
////


//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.UnderexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#vbmax]
=== `vbmax`
+++Maximum excitation voltage (<i>V</i><i><sub>BMax</sub></i>) (&gt; 0).  Typical value = 11,63.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.vbmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vbmax,&#10548;>>
--
////


//[discrete]
[#vmmax]
=== `vmmax`
+++Maximum inner loop output (<i>V</i><i><sub>MMax</sub></i>) (&gt; ExcIEEEST4B.vmmin).  Typical value = 99.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.vmmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vmmax,&#10548;>>
--
////


//[discrete]
[#vmmin]
=== `vmmin`
+++Minimum inner loop output (<i>V</i><i><sub>MMin</sub></i>) (&lt; ExcIEEEST4B.vmmax).  Typical value = -99.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.vmmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vmmin,&#10548;>>
--
////


//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.VoltageCompensatorDynamics,&#10548;>>
--
////


//[discrete]
[#vrmax]
=== `vrmax`
+++Maximum voltage regulator output (<i>V</i><i><sub>RMAX</sub></i>) (&gt; 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.vrmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vrmax,&#10548;>>
--
////


//[discrete]
[#vrmin]
=== `vrmin`
+++Minimum voltage regulator output (<i>V</i><i><sub>RMIN</sub></i>) (&lt; 0).  Typical value = -0,87.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.vrmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vrmin,&#10548;>>
--
////


//[discrete]
[#xl]
=== `xl`
+++Reactance associated with potential source (<i>X</i><i><sub>L</sub></i>) (&gt;= 0).  Typical value = 0,124.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEST4B.xl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.xl,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
